force-app/main/default/objects/Production_Allocation__c/Production_Allocation__c.object-meta.xml
<CustomObject>
    <description>Allocates produced oil, gas, and water volumes to wells by period with working interest and revenue share calculations.</description>
    <label>Production Allocation</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Allocations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>