force-app/main/default/objects/Production_Allocation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Production Allocations</relationshipLabel>
    <relationshipName>Production_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>