force-app/main/default/objects/Production_Allocation__c/fields/Allocated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Revenue__c</fullName>
    <label>Allocated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>