force-app/main/default/objects/Production_Allocation__c/fields/Days_On_Production__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Production__c</fullName>
    <label>Days On Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>