force-app/main/default/objects/Production_Allocation__c/fields/Gas_Volume_MCF__c.field-meta.xml
<CustomField>
    <fullName>Gas_Volume_MCF__c</fullName>
    <label>Gas Volume MCF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>