force-app/main/default/objects/Production_Allocation__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <label>Lease</label>
    <referenceTo>Lease__c</referenceTo>
    <relationshipLabel>Production Allocations</relationshipLabel>
    <relationshipName>Production_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>