force-app/main/default/objects/Production_Allocation__c/fields/Net_Revenue_Interest_Share__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue_Interest_Share__c</fullName>
    <label>Net Revenue Interest Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>