force-app/main/default/objects/Production_Allocation__c/fields/Severance_Tax__c.field-meta.xml
<CustomField>
    <fullName>Severance_Tax__c</fullName>
    <label>Severance Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>