force-app/main/default/objects/Production_Allocation__c/fields/Water_Volume_bbls__c.field-meta.xml
<CustomField>
    <fullName>Water_Volume_bbls__c</fullName>
    <label>Water Volume bbls</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>