force-app/main/default/objects/Production_Allocation__c/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <label>Well</label>
    <referenceTo>Well__c</referenceTo>
    <relationshipLabel>Production Allocations</relationshipLabel>
    <relationshipName>Production_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>