force-app/main/default/objects/Production_Allocation__c/fields/Working_Interest_Share__c.field-meta.xml
<CustomField>
    <fullName>Working_Interest_Share__c</fullName>
    <label>Working Interest Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>